--- a/src/style.css
+++ b/src/style.css
@@ -6,5 +6,4 @@ nav {
 .change {
   background-color: rgba(0, 0, 0, 0.4);
   backdrop-filter: blur(5%);
-  box-shadow: 5px 10px 5px rgba(0, 0, 0, 0.8);
 }
